<resources>
    <string name="app_name">Cebu Trans. Guide</string>
    <string name="jeepney_code">Jeepney Code</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--<string name="google_map_API_key">AIzaSyDoWzA7Sa2sTwRJ91q-jw5XfOpW5bcRsvg</string>-->
    <string name="google_map_API_key">AIzaSyDyaHhnZ6MnmKlIvFcd4yAaWJMeXP0_6Ok</string>
    <string name="action_settings">Settings</string>
    <string name="about_one">This application use Google Maps API mapping services developed by Google, to allow users to find available direction and distance, for now the API currently we use does not contain ads, but googlestates in their terms of use that they reserve the right to display ads in the future.</string>
    <string name="about_feature">Convenient and comfortable experience w/ ease by showing direction between 2 places, distance, jeepney fare, current location via GPS and marker indicator.</string>
    <string name="advantage">This can make your journey easier and help to locate addresses that you are not familliar with.</string>
    <string name="disadvantage">Transportaion mode set by driving mode and Limited direction between places</string>
    <string name="lorem_ipsum">Lorem Ipsum porttitor eget ex. Aenean molestie, sem in mattis commodo, velit libero cursus ex,cies vehicula, Lorem Ipsum porttitor eget ex. Aenean molestie, sem in mattis commodo.</string>
    <string name="lorem_ipsum_short">Lorem Ipsum porttitor eget ex. Aenean molestie, sem in mattis commodo</string>
    <string name="lorem_ipsum_long">Lorem Ipsum porttitor eget ex. Aenean molestie, sem in mattis commodo, velit libero cursus ex,cies vehicula, Lorem Ipsum porttitor eget ex. Aenean molestie, sem in mattis commodo. Lorem Ipsum porttitor eget ex. Aenean molestie, sem in mattis commodo, velit libero cursus ex,cies vehicula, Lorem Ipsum porttitor eget ex. Aenean molestie, sem in mattis commodo.</string>
    <string name="history">Jeepneys (Filipino: Dyipne), sometimes called simply jeeps (Filipino: dyip), are the most popular means of public transportation in the Philippines. They are known for their crowded seating and kitsch decorations, which have become a ubiquitous symbol of Philippine culture and art. A Sarao jeepney was exhibited at the Philippine pavilion at the 1964 New York Worlds Fair as a national image for the Filipinos.Jeepneys were originally made from U.S. military jeeps left over from World War II. The word jeepney is likely a portmanteau word – a combination of jeep and jitney, both words common slang in the popular vernacular of the era: jitney being a popular term for an American taxicab, and a jeep a newly coined term to describe a type of military vehicle (origin from General Purpose, or GP, hence Jeep). Other sources favor the far less likely explanation that it is a portmanteau of jeep and knee, because the passengers sit in very close proximity to each other. Most jeepneys are used as public utility vehicles. Some are used as personal vehicles. Jeepneys are used less often for commercial or institutional use. | (c) Wikipedia</string>
</resources>
