<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/optionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alwaysDrawnWithCache="true"
    android:animationCache="true"
    android:background="@color/whiteSmoke"
    android:drawingCacheQuality="auto"
    android:orientation="vertical"
    android:persistentDrawingCache="all">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="3dp">

        <LinearLayout
            android:id="@+id/one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="@color/lightGray"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="13dp"
                android:src="@drawable/setting__" />

            <in.codeshuffle.typewriterview.TypeWriterView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:fontFamily="monospace"
                android:text="Application option"
                android:textColor="@color/darkBlue"
                android:textSize="13dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/eBrain"
                android:layout_width="0dp"
                android:layout_height="0dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/one"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/google" />

            <LinearLayout
                android:id="@+id/mapStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/tv_maptheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:fontFamily="monospace"
                    android:gravity="center_vertical"
                    android:text="Map Style"
                    android:textColor="@color/darkBlue"
                    android:textSize="12dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/map_styleContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="monospace"
                    android:text="@string/lorem_ipsum"
                    android:textSize="12dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/two"
            android:orientation="vertical">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/hybrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="10dp"
                android:text="Blue Clover"
                android:textSize="12dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/three"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:src="@drawable/tools" />

            <LinearLayout
                android:id="@+id/background_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/tv_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:fontFamily="monospace"
                    android:gravity="center_vertical"
                    android:text="Background Theme"
                    android:textColor="@color/darkBlue"
                    android:textSize="12dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/background_themeContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="monospace"
                    android:text="@string/lorem_ipsum"
                    android:textSize="12dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/four"
            android:orientation="vertical">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/darkTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="10dp"
                android:text="Dark Mode"
                android:textSize="12dp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:background="@color/darkBlue"
        android:layout_height="match_parent">

        <RelativeLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/creditArea"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/dollar"
                    android:layout_width="15dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_height="20dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:textStyle="bold"
                    android:text="Credit"
                    android:textColor="@color/whiteSmoke"
                    android:textSize="12dp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/creditContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/creditArea">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textSize="12dp"
                    android:fontFamily="monospace"
                    android:textColor="@color/whiteSmoke"
                    android:text="@string/lorem_ipsum_long" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/creditContent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="20dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:src="@drawable/search" />

                    <LinearLayout
                        android:id="@+id/c_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:layout_marginStart="10dp"
                        android:background="@color/colorBlue"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="monospace"
                            android:textColor="@color/whiteSmoke"
                            android:text="Google Map"
                            android:textSize="12dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/whiteSmoke"
                            android:textSize="12dp"
                            android:fontFamily="monospace"
                            android:text="@string/lorem_ipsum_short" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:src="@drawable/android_x" />

                    <LinearLayout
                        android:id="@+id/c_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="4dp"
                        android:background="@color/colorBlue"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="monospace"
                            android:textColor="@color/whiteSmoke"
                            android:text="Android Arsenal"
                            android:textSize="14dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12dp"
                            android:fontFamily="monospace"
                            android:text="@string/lorem_ipsum_short"
                            android:textColor="@color/whiteSmoke" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:padding="4dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/freepik"
                        android:layout_width="21dp"
                        android:layout_gravity="center"
                        android:layout_height="24dp" />
                    <LinearLayout
                        android:id="@+id/c_three"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_marginStart="10dp"
                        android:padding="4dp"
                        android:background="@color/colorBlue"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/whiteSmoke"
                            android:fontFamily="monospace"
                            android:text="Freepik"
                            android:textSize="14dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="monospace"
                            android:textColor="@color/whiteSmoke"
                            android:textSize="12dp"
                            android:text="@string/lorem_ipsum_short" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:padding="4dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <LinearLayout
                        android:id="@+id/c_four"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:background="@color/colorBlue"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_marginTop="2dp"
                            android:src="@drawable/index"
                            android:layout_width="100dp"
                            android:layout_gravity="center"
                            android:layout_height="20dp" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="monospace"
                            android:gravity="center"
                            android:padding="4dp"
                            android:text="@string/lorem_ipsum_short"
                            android:textColor="@color/whiteSmoke"
                            android:textSize="12dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/aljun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/ethereum"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginBottom="2dp"
                            android:src="@drawable/java" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="4dp"
                            android:fontFamily="monospace"
                            android:gravity="center_vertical"
                            android:text="SoftEng Project"
                            android:textColor="@color/whiteSmoke"
                            android:textSize="12dp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="monospace"
                        android:gravity="center"
                        android:text="All Right Reserved 2018"
                        android:textSize="12dp"
                        android:textColor="@color/whiteSmoke"
                       />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>